# Black_Key

./: .gitignore  .gitmodules  Black_Key.sln  CMakeLists.txt  README.md  imgui.ini  vcpkg.json  vk_engine.cpp  vk_engine.h
Black_Key/: Black_Key.vcxproj  Black_Key.vcxproj.filters  CMakeLists.txt  imgui.ini  main.cpp
Black_Key/assets/: cube.glb  cube.gltf  material_sphere.glb  plane.glb  plane.gltf  sphere.glb
Black_Key/assets/textures/: plane.glb
Black_Key/include/: engine_psos.h  engine_util.h  resource_manager.h  vk_engine.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h  voxelizer.h
Black_Key/include/Renderers/: base_renderer.h  clustered_forward_renderer.cpp  clustered_forward_renderer.h  ssil_renderer.cpp  ssil_renderer.h  voxel_cone_tracing_renderer.cpp  voxel_cone_tracing_renderer.h
Black_Key/shaders/: Downsample.comp  Downsample.spv  FXAA.glsl  Upsample.comp  Upsample.spv  bloom.vert  bloom.vert.spv  blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  brdf.frag  brdf.frag.spv  brdf.glsl  brdf.vert  brdf.vert.spv  brdf_lut.comp  brdf_lut.spv  cascaded_shadows.geom  cascaded_shadows.geom.spv  cascaded_shadows.gs  cascaded_shadows.vert  cascaded_shadows.vert.spv  cluster_cull_light_shader.comp  cluster_cull_light_shader.spv  cluster_info.glsl  cluster_shader.comp  cluster_shader.spv  compile.bat  depthReduce.comp  depth_pass.vert  depth_pass.vert.spv  depth_reduce.comp.spv  downsample.comp  filter_cube.vert  filter_cube.vert.spv  gen_brdf_lut.vert  genbrdflut.frag  hdr.frag  hdr.frag.spv  (+35 more)
Black_Key/src/: Lights.h  Shadows.cpp  Shadows.h  UI.cpp  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  engine_psos.cpp  engine_psos.h  engine_util.cpp  engine_util.h  graphics.cpp  graphics.h  input_handler.cpp  input_handler.h  main.cpp  render_graph.cpp  render_graph.h  render_pass.h  resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h  vk_buffer.cpp  vk_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_engine.cpp  vk_engine.h  vk_gltf.cpp  vk_gltf.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_material_system.cpp  (+9 more)
Black_Key/src/Renderers/: VoxelConeTracingRenderer.cpp  VoxelConeTracingRenderer.h  base_renderer.h  clustered_forward_renderer.cpp  clustered_forward_renderer.h  voxel_cone_tracing_renderer.cpp  voxel_cone_tracing_renderer.h
Black_Key/src/core/: vk_descriptors.cpp  vk_engine.h  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_loader.h  vk_renderer.h
Black_Key/src/renderers/: PBR_Clustered_Renderer.cpp  PBR_Clustered_Renderer.h  base_renderer.h
Holder/: engine_psos.cpp  engine_psos.h  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
assets/shaders/: blur.vert.spv  brdf.glsl  cascaded_shadows.geom  compile.bat  conservative_voxelization.vert  depth_reduce.comp  downsample.comp  downsample.spv  forward_resource.glsl  g_buffer_pass.frag  g_buffer_pass.vert  global_resources.glsl  hdr.frag  hdr.frag.spv  hdr.vert.spv  indirect_cull.comp  indirect_cull.comp.spv  indirect_forward.frag  indirect_forward.frag.spv  indirect_forward.vert  indirect_forward.vert.spv  pbr_bindless.vert.spv  pbr_test.frag  pbr_test.frag.spv  postprocessing.comp  postprocessing.comp.spv  pre_filter.spv  resource.glsl  sky.spv  skybox.frag  skybox.vert  types.glsl  upsample.comp  upsample.frag
assets/shaders/Voxel_Cone_Tracing/: GI_pass.frag  GI_pass.frag.spv  GI_pass.vert  GI_pass.vert.spv  GI_pass_old.frag  common.glsl  cons_voxelization.vert.spv  conservative_opacity_voxelization.geom  conservative_radiance_voxelization.geom  conservative_radiance_voxelization.vert  msaa_radiance_voxelization.frag  msaa_radiance_voxelization.geom  msaa_radiance_voxelization.vert  radiance_injection.geom  unpack_and_copy.comp  unpack_and_copy.spv  unpack_and_filter.comp  unpack_and_filter.spv  voxelization.glsl  voxelizationFrag.glsl  voxelizationGeom.glsl
assets/shaders/Voxel_Cone_Tracing/visualization/: texture3DVisualization.frag  texture3DVisualization.frag.spv  texture3DVisualization.geom  texture3DVisualization.geom.spv  texture3DVisualization.vert  visualization.glsl
assets/shaders/voxel_cone_tracing/: atomicOperations.glsl  cons_voxelization.frag.spv  cons_voxelization.geom.spv  cons_voxelization.vert.spv  conservative_radiance_voxelization.frag  conservative_radiance_voxelization.geom  conservative_radiance_voxelization.vert  normalize_voxel_radiance.comp
assets/shaders/voxel_cone_tracing/visualization/: texture3DVisualization.frag.spv  texture3DVisualization.geom.spv  texture3DVisualization.vert.spv  visualization.glsl
include/Renderers/: clustered_forward_renderer.cpp
